2005-07-27  Stepan Kasal  <kasal@ucw.cz>

	* tests/defs.in: When required matches both `*libtool*' and
	`*gettext*', check for both m4 files.

	* doc/automake.texi (Auxiliary Programs): Fix a typo.
	* tests/suffix11.test: Fix a typo.
	* tests/colon3.test: s/EGREP/FGREP/.

2005-07-19  Paul Eggert  <eggert@cs.ucla.edu>

	* tests/instspc.test: Major rewrite to test for many other
	problematic file names, e.g., '$', '"', '('.  Automake and
	Autoconf can't handle many of them, so do not report a failure
	if the usual candidates show up.

2005-07-19  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (automake, aclocal): Merge the rules.

2005-07-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

2005-07-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/install-sh: Use IFS=/ to split directories on /, don't translate
	/ into % as it prevents directory names using %...

2005-07-09  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi (Public macros): Typo.
	* aclocal.in: Typo in comment.

2005-07-09  Zack Weinberg  <zack@codesourcery.com>  (tiny change)

	* lib/depcomp: Handle "#line" markers as well as "# " markers in
	"cpp" style, so it can work with newer HP compilers (for their
	ia64 systems).

2005-07-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Public macros) <AM_WITH_DMALLOC>: Reword to
	fix an underful hbox.
	* lib/INSTALL, lib/config.guess, lib/config.sub, lib/texinfo.tex:
	New upstream versions.

2005-07-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/python.m4 (_AM_PYTHON_INTERPRETER_LIST): Add python2.5.

2005-06-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (make_paragraphs): Do not define %TOPDIR%, now that
	lib/am/header-vars.am no longer uses it.
	* lib/am/libtool.am (distclean-am, distclean-libtool): Define
	if TOPDIR_P is true, not TOPDIR.
	Suggested by Stepan Kasal.

	* automake.in (read_am_file): Correctly diagnose comments following
	trailing backslash.