@@ -7140,7 +7140,7 @@ sub require_file_internal ($$$@)
 	      my $message = "required file `$fullfile' not found";
 	      if ($add_missing)
 		{
-		  if (-f ("$libdir/$file"))
+		  if (-f "$libdir/$file")
 		    {
 		      $suppress = 1;
 
@@ -7182,6 +7182,11 @@ sub require_file_internal ($$$@)
 				 . " so $fullfile gets distributed.");
 			}
 		    }
+		}
+	      else
+		{
+		  $trailer = "\n  `automake --add-missing' can install `$file'"
+		    if -f "$libdir/$file";
 		}
 
 	      # If --force-missing was specified, and we have
