@@ -1,3 +1,13 @@
+2005-07-27  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/Variable.pm (require_variables): Mention aclocal's
+	search path when suggesting to add a macro in configure.ac.
+	People are confused when Automake suggests adding a macro (such as
+	AC_PROG_LIBTOOL) that is already in configure.ac.
+	* automake.in (require_file_internal): Suggest `automake --add-missing'
+	for missing files that can be installed.
+	* tests/library3.test: Adjust.
+
 2005-07-27  Stepan Kasal  <kasal@ucw.cz>
 
 	* tests/defs.in: When required matches both `*libtool*' and
